--- a/front-end/tech/src/App.css
+++ b/front-end/tech/src/App.css
@@ -4,6 +4,7 @@ body{
 
 .App {
   text-align: center;
+  
 }
 
 .App-logo {
@@ -56,6 +57,16 @@ body{
 
 .price{
   font-size: 25px;
+}
+
+.myacc{
+  font-size: 18px;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 button:disabled {
