Search & Add Prod is WORKING, Statements based on Auths (#48)
* Search is WORKING

* have the ADMIN status

* done the statement to show cart or remove for admin or user

* ADMIN maybe done, styling

* Pictures WORKING from databse

* Add prod WORKING fine with new image input

* Fixed the if statement logic

* Edit Profile Fixing, not done yet

--- a/front-end/tech/src/App.css
+++ b/front-end/tech/src/App.css
@@ -42,7 +42,14 @@ body{
   }
 }
 
+.admin{
+  font-weight: bold;
+  color: rgb(241, 135, 135);
+}
 
+.name{
+  text-decoration: underline;
+}
 
 .red {
   color:red
